Update dependencies and improved logging